# Brainz-Wrapped

./: README.md
brainz-backend/: Cargo.toml
brainz-backend/src/: listenbrainz.rs  main.rs  routes.rs
brainz-backend/src/analytics/: busiest_day.rs  heatmap.rs  hourly.rs  listening_age.rs  mod.rs  sessions.rs  stats.rs  streaks.rs  top_artists.rs  top_tracks.rs  weekday.rs
brainz-frontend/: package-lock.json  package.json
brainz-frontend/app/: globals.css  layout.tsx  page.tsx
brainz-frontend/app/stats/[username]/: loading.tsx  page.tsx
brainz-frontend/components/: Heatmap.tsx  Hero.tsx  HourlyChart.tsx  ListeningAge.tsx  RefreshButton.tsx  StatsCards.tsx  TopArtists.tsx  TopTracks.tsx  WeekdayChart.tsx
