[package]
name = "brainz-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.44"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["cors"] }
futures = "0.3.32"
once_cell = "1.21.4"
urlencoding = "2.1.3"
